[package]
name = "ipld"
version = "0.1.0"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
description = "Types, traits and macros for the IPLD Data Model, Schema, Representation, and Selector specifications."
license = "MIT or Apache-2.0"
edition = "2021"

[lib]
name = "ipld"
path = "src/lib.rs"

[dependencies]
# core
bytes = "0.5"
cid = { version = "0.8", features = ["std"] }
erased-serde = { version = "0.3", features = ["std"] }
# ipfs = { git = "https://github.com/ipfs-rust/rust-ipfs", branch = "master", optional = true }
ipld-macros = { path = "./macros" }
ipld-macros-internals = { path = "./macros-internals" }
multibase = "0.9"
multihash = { version = "0.16", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
thiserror = "1.0"

# formats
serde_cbor = { version = "0.11", optional = true } # TODO: use ciborium instead
serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.6", optional = true }

# misc
anyhow = "1.0"
const-str = "0.3"
delegate = { version = "0.7", optional = true }
downcast-rs = "1.2"
impls = "1.0"

[dev-dependencies]
criterion = "0.3"
proptest = "1.0"

[features]
default = ["multicodec"]
dag-cbor = ["serde_cbor/tags"]
dag-json = ["delegate", "serde_json"]
dag-pb = []
# enables all available multicodecs
multicodec = ["dag-cbor", "dag-json", "dag-pb"]
# enables simd-related implementations, including an alternate dag-json
simd = ["dag-json", "simd-json"]
value-ext = []

[workspace]
members = [
  # "advanced-schemas",
  # "codegen",
  "macros",
  "macros-hack",
  "macros-internals",
  # "sqlite",
]

[patch.crates-io]
# cid = { path = "../rust-cid" }
# multihash = { path = "../rust-multihash" }
