[package]
name = "ipld"
version = "0.0.3"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
description = "Types, traits and macros for the IPLD Data Model, Schema, Representation, and Selector specifications."
license = "MIT or Apache-2.0"
edition = "2021"

[lib]
name = "ipld"
path = "src/lib.rs"

[dependencies]
# core
bytes = { version = "1.2", features = ["serde"] }
cid = { version = "0.8", features = ["alloc", "std", "serde-codec"] }
# erased-serde = { version = "0.3", features = ["std"] }
# ipfs = { git = "https://github.com/ipfs-rust/rust-ipfs", branch = "master", optional = true }
ipld-macros = { path = "./macros" }
ipld-macros-internals = { path = "./macros-internals" }
multibase = "0.9"
multihash = { version = "0.16", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
# serde_repr = "0.1"
thiserror = "1.0"
unicode-normalization = "0.1"

# codecs
serde_cbor = { version = "0.11", optional = true } # TODO: use ciborium instead
serde_json = { version = "1.0", optional = true, features = ["float_roundtrip"] }
# simd-json = { version = "0.6", optional = true, features = ["serde_impl", "128bit"] }

# misc
anyhow = "1.0"
bitflags = "1.3"
cfg-if = "1"
# const-str = "0.3"
# const_format = "0.2"
delegate = { version = "0.8", optional = true }
downcast-rs = "1.2"

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"

[features]
default = ["multicodec"]
dag-cbor = ["serde_cbor/tags"]
dag-json = ["serde_json", "delegate"]
dag-pb = []
# enables all available multicodecs
multicodec = ["dag-cbor", "dag-json", "dag-pb"]
# # enables simd-related implementations, including an alternate dag-json
# simd = ["dag-json", "simd-json"]

[workspace]
members = [
  # "advanced-schemas",
  # "codegen",
  "macros",
  "macros-hack",
  "macros-internals",
  # "sqlite",
]
exclude = [
  "codec-fixtures/rust",
]

[patch.crates-io]
# cid = { path = "../rust-cid" }
# multihash = { path = "../rust-multihash" }
