[package]
name = "ipld-dag-cbor"
version = "0.1.0"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[lib]
name = "ipld_dag_cbor"
path = "src/lib.rs"

[dependencies]
cid = "^0.3"
ipld = { path = "../" }
serde = { version = "^1.0", features = ["derive"] }
serde_cbor = { version = "0.11", features = ["tags"] }
