[package]
name = "ipld-macros-internals"
version = "0.1.0"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
impls = "1"
# juniper = { version = "0.14", optional = true }
# num-traits = "0.2"
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0"
quote = "1.0"
static_assertions  = "1.1.0"
syn = { version = "1.0", features = ["extra-traits"] }
tylift = "0.3"

[dev-dependencies]
syn = { version = "1.0", features = ["full"] }
