[package]
name = "ipld-macros-internals"
version = "0.0.3"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.3"
derive_more = "0.99"
# impls = "1"
# juniper = { version = "0.14", optional = true }
# num-traits = "0.2"
proc-macro-crate = "1.1"
proc-macro2 = "1.0"
quote = "1.0"
# static_assertions  = "1.1.0"
syn = { version = "1.0", features = ["extra-traits", "printing"] }
# tylift = "0.3"
typenum = "1.15"
typenum-macro = { git = "https://github.com/paholg/typenum", branch = "proc_macro" }

[dev-dependencies]
syn = { version = "1.0", features = ["full"] }
