[package]
name = "ipld-macros"
version = "0.0.1"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
# impls = "1"
# ipld = { path = "../" }
ipld-macros-internals = { path = "../macros-internals" }
# juniper = { version = "0.14", optional = true }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = "1.0"

[features]
default = []
convert = []
# graphql = ["juniper"]
