[package]
name = "ipld-macros"
version = "0.0.3"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
ipld-macros-hack = { path = "../macros-hack" }
ipld-macros-internals = { path = "../macros-internals" }
proc-macro-hack = "0.5"
quote = "1.0"
syn = "1.0"

[features]
default = []
convert = []
# graphql = ["juniper"]
