[package]
name = "ipld-schema-derive"
version = "0.0.1"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
# impls = "1"
# ipld = { path = "../" }
ipld-schema-derive-internals = { path = "../schema-derive-internals" }
# juniper = { version = "0.14", optional = true }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = "1.0"

[dev-dependencies]
ipld-schema = { path = "../schema" }

[features]
default = []
convert = []
# graphql = ["juniper"]
