[package]
name = "ipld-schema"
version = "0.0.1"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[lib]
name = "ipld_schema"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bytes = { version = "0.5", optional = true }
cid = "^0.3"
derive_more = "0.99"
failure = "0.1"
lazy_static = "1.4"
ipld = { path = "../" }
ipld-schema-derive = { path = "../schema-derive", optional = true }
paste = "0.1.6"
serde = { version = "^1.0", features = ["derive"] }

[features]
default = []
bytes_ = ["bytes"]
derive = ["ipld-schema-derive"]
graphql = ["ipld-schema-derive", "ipld-schema-derive/graphql"]
